// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AppList> test appList 1`] = `
<AppList__Wrapper>
  <FlexGrid
    gutter="10px"
  >
    <AppIcon
      size="medium"
      src="https://static-s.aa-cdn.net/img/gp/20600003867506/WjPDaHXE8ufMDQ43x8qpLfH9yuw1D0mlKzOJLSbeETcRLCONpBChskUtj3DtVTDJknw=w300_w80"
    />
    <AppIcon
      size="medium"
      src="https://static-s.aa-cdn.net/img/gp/20600004729627/fFI2bIE44LYBwecU17bVeIdvKbRao6O3zek6U6x-5A22uXbEO4fWm15dfffg2jHBTg=w300_w80"
    />
    <AppIcon
      size="medium"
      src="https://static-s.aa-cdn.net/img/ios/1039182706/18de8684db7bcaebb95232d7dc66f252_w80"
    />
    <AppIcon
      size="medium"
      src="https://static-s.aa-cdn.net/img/ios/358534918/ec96f2e8d1fdb23f5cea8671d9d8335a_w80"
    />
    <AppIcon
      size="medium"
      src="https://static-s.aa-cdn.net/img/ios/688824991/b3ca3dbc0fb23363af7aa7917d4728a8_w80"
    />
    <AppIcon
      size="medium"
      src="https://static-s.aa-cdn.net/img/ios/805530850/d5b350ceb68604faafe6a3c234b07bb7_w80"
    />
    <AppIcon
      size="medium"
      src="https://static-s.aa-cdn.net/img/ios/884096407/1f6d3ba08a891906570ad2bb68b8dcdd_w80"
    />
    <AppIcon
      size="medium"
      src="https://static-s.aa-cdn.net/img/ios/892841769/b27b0d7ccf10c6182fcf6ddf30017421_w80"
    />
    <AppIcon
      size="medium"
      src="https://static-s.aa-cdn.net/img/ios/906627580/f41757b0e6c2509e20a937e80e2e0233_w80"
    />
    <span
      className="js-more-apps-marker"
    >
      +5 more
    </span>
  </FlexGrid>
  <AppList__Notice>
    We will automatically add selected apps across platforms and devices.
  </AppList__Notice>
</AppList__Wrapper>
`;

exports[`<AppList> test appList 2`] = `
<AppList__Wrapper>
  <FlexGrid
    gutter="10px"
  >
    <AppIcon
      size="medium"
      src="https://static-s.aa-cdn.net/img/gp/20600003867506/WjPDaHXE8ufMDQ43x8qpLfH9yuw1D0mlKzOJLSbeETcRLCONpBChskUtj3DtVTDJknw=w300_w80"
    />
    <AppIcon
      size="medium"
      src="https://static-s.aa-cdn.net/img/gp/20600004729627/fFI2bIE44LYBwecU17bVeIdvKbRao6O3zek6U6x-5A22uXbEO4fWm15dfffg2jHBTg=w300_w80"
    />
    <AppIcon
      size="medium"
      src="https://static-s.aa-cdn.net/img/ios/1039182706/18de8684db7bcaebb95232d7dc66f252_w80"
    />
    <AppIcon
      size="medium"
      src="https://static-s.aa-cdn.net/img/ios/358534918/ec96f2e8d1fdb23f5cea8671d9d8335a_w80"
    />
    <AppIcon
      size="medium"
      src="https://static-s.aa-cdn.net/img/ios/688824991/b3ca3dbc0fb23363af7aa7917d4728a8_w80"
    />
  </FlexGrid>
  <AppList__Notice>
    We will automatically add selected apps across platforms and devices.
  </AppList__Notice>
</AppList__Wrapper>
`;
